<resources>
    <string name="app_name">Game_alpha</string>
    <string name="prologue_title"><u>ГЛАВА I</u>\nПредзнаменования</string>
    <string name="start">Начать</string>
    <string name="start_main">Новая игра</string>
    <string name="continue_main">Продолжить</string>
    <string name="settings_main">Настройки</string>
    <string name="settings_text_font">Размер текста</string>
    <string name="exit_main">Выход</string>
    <string name="inventory_sleeping_bug">Спальник</string>
    <string name="inventory_knife">Нож</string>
    <string name="inventory_raincoat">Дождевик</string>
    <string name="inventory_food">Припасов: </string>
    <string name="inventory_drugs">Лекарств: </string>
    <string name="inventory_text_main">Выберете элемент, чтобы получить подсказку</string>
    <string name="inventory_text_health">Уровень здоровья Адама</string>
    <string name="inventory_text_hunger">Уровень голода Адама</string>
    <string name="inventory_text_luck">Уровень удачи Адама</string>
    <string name="inventory_text_knife">Добротный охотничий нож</string>
    <string name="inventory_text_raincoat">Непромокаемый плащ-пончо цвет хаки</string>
    <string name="inventory_text_sleeping_bug">Обычный спальник</string>
    <string name="inventory_text_food">Число припасов на одного человека</string>
    <string name="inventory_text_drugs">Одно лекарство - одна рана</string>
    <string name="prologue_start">
        Адам открыл глаза. И первое, что он увидел, было чистое, без единого облачка, небо. Ощущение, будто смотришь в голубую бездну. Потом пришла боль в колене, а мир вокруг стал приобретать всё более отчетливые краски и звуки.
Шум воды оглушал, а острые прибрежные камни впивались в тело, которое словно онемело и слабо реагировало на попытки подняться.
Последнее, что он хорошо помнил, это то, как пытался заснуть в своей палатке на берегу спокойной горной реки. Была ещё жгучая боль по всему телу, словно его облили ледяной водой. Впрочем, судя по всему, так оно и было.
Река в этом месте делает крутой поворот, образуя широкую каменистую косу, на которую постоянно выносит течением плавник и прочий мелкий мусор. На этот раз вынесло и одинокого археолога.
Адам смутно припоминал, где-то на грани сна и реальности, что ночью началась гроза, и мощный ливень бушевал снаружи. Видимо его лагерь, так неудачно поставленный на берегу, унесло течением. Не лучшее начало экспедиции.
Собравшись с силами, Адам смог наконец встать на ноги. Из одежды на нем были плотные походные штаны, футболка и легкая куртка. Он слишком устал от долго перехода и завалился спать в том, в чем был, планируя рано утром продолжить путь.
По ощущению, был примерно полдень. Оставалось только решить, куда направиться. Вверх по течению, в поисках своего \ лагеря, откуда этой ночью его сюда и принесло. Или вниз, в надежде, что его снаряжение выбросило чуть дальше, хотя это было маловероятно.\n
В одном из карманов обнаружился герметичный чехол с компасом и зажигалкой. \"Хоть что-то я продумал как следует\" - появилась утешительная мысль. Во втором кармане была его походная фляга.\n
Чуть в отдалении, среди камней была куча брезента, по цвету напоминающая его палатку. Наверное, стоит её проверить.
    </string>
    <string name="prologue_tent"><i>Проверить</i> палатку</string>
    <string name="prologue_tent_fail">
    Тяжело поднявшись, Адам заметил справа от себя кучу разорванного брезента, когда-то бывшей его палаткой.\n
В остатках палатки не было ничего интересного. </string>
    <string name="prologue_tent_luck">
    Тяжело поднявшись, Адам заметил справа от себя кучу брезента, когда-то бывшей его палаткой. Наверное, стоит её проверить.\n
        В палатке Адам нашел чудом оставшийся сухим, спальник.</string>
    <string name="prologue_move_up">Идти вверх по течению</string>
    <string name="prologue_message">Ценная находка: спальник....\nУдача понижена!</string>
    <string name="prologue_message_fail">Поиск не дал результатов....\nУдача повышена!</string>
    <string name="prologue_move_down">Идти вниз по течению</string>
    <string name="settings_fonts">Изменить шрифт</string>
    <string name="settings_line_spacing">Междустрочный интервал</string>
    <string name="settings_button_close">Сохранить</string>
    <string name="prologue_training_first_scene_text">
        Дорогой Друг!\n
        Это небольшое обучение поможет разобраться тебе в механике игры и, в некоторой степени, не совершать ошибок.\n
        Как правило, внизу экрана расположены кнопки выбора действий главного героя. Первым нажатием ты выберешь действие, вторым же нажатием подтвердишь свой выбор.\n
        На пути тебе будут встречаться так называемые мини-игры. В них механика отличается от остальной игры, поэтому перед ними мы также ознакомим тебя с принципом игры посредством обучения.\n
        Важное значение имеет показатель удачи, который динамично изменяется на протяжении всей истории и напрямую зависит от
        твоих действий в игре. Любой провал ведет к повышению шанса на успех при следующей проверке, и наоборот,
        чрезмерные успехи рано или поздно приведут к провалу или может даже к череде неудач.\n
        Решения, основанные на показателе удачи, в большинстве случаев выделены <i>курсивом</i>.\n
        Многие решения необратимы, поэтому к каждой игровой ситуации рекомендуем подходить серьёзно! Ведь история может развиваться путями, которые абсолютно не похожи друг на друга. И кто знает, куда может завести тебя выбранный путь.
        Первый серьёзный выбор ты сделаешь прямо сейчас.\n
        Удачи!
    </string>
    <string name="prologue_game_victory_down_text">С большим трудом Адам добрался до берега вместе с рюкзаком. О продолжении
    пути не могло быть и речи. Его всё ещё трясло от ледяной воды, а без того потрепанный походный рюкзак сейчас представлял собой комок ткани и налипшей глины. Его предстояло разобрать и хорошенько высушить. Да и решить, что делать дальше, тоже не помешает.\n
    В пятидесяти метрах от реки, каменистый берег уступал мелкому подлеску, где Адаму предстояло развести костёр и разобрать рюкзак.
</string>
    <string name="prologue_backpack_open_top_part">Открыть верхний "клапан"</string>
    <string name="prologue_backpack_open_middle_part">Открыть основное отделение</string>
    <string name="prologue_backpack_open_basement_part">Открыть нижнюю часть</string>
    <string name="prologue_backpack_open_additional_part">Проверить карманы</string>
    <string name="prologue_backpack_top_part_knife">Адам <i>помнил</i>, что точно положил туда нож</string>
    <string name="prologue_backpack_top_part_knife_luck">Адам <i>не уверен</i>, что положил нож</string>
    <string name="prologue_backpack_top_part_knife_no_luck">Адам <i>помнил</i>, что там нет ничего ценного</string>
    <string name="prologue_backpack_top_part_back">Осмотреть другие части</string>
    <string name="prologue_backpack_middle_part_sleeping_bug">Адам <i>помнил</i>, что точно положил спальник</string>
    <string name="prologue_backpack_middle_part_sleeping_bug_luck">Адам <i>не уверен</i>, что положил спальник</string>
    <string name="prologue_backpack_middle_part_sleeping_bug_no_luck">Адам <i>помнил</i>, что там нет ценного</string>
    <string name="prologue_backpack_middle_part_back">Осмотреть другие части</string>
    <string name="prologue_backpack_basement_part_raincoat">Адам <i>помнил</i>, что точно положил дождевик</string>
    <string name="prologue_backpack_basement_part_raincoat_luck">Адам <i>не уверен</i>, что положил туда дождевик</string>
    <string name="prologue_backpack_basement_part_raincoat_no_luck">Адам <i>помнил</i>, что там нет ничего ценного</string>
    <string name="prologue_backpack_basement_part_back">Осмотреть другие части</string>
    <string name="prologue_backpack_additional_part_ointment">Адам <i>помнил</i>, что точно положил туда мазь</string>
    <string name="prologue_backpack_additional_part_ointment_luck">Адам <i>не уверен</i>, что положил мазь</string>
    <string name="prologue_backpack_additional_part_ointment_no_luck">Адам <i>помнил</i>, что там нет ценного</string>
    <string name="prologue_backpack_additional_part_back">Осмотреть другие части</string>
    <string name="prologue_backpack_camp">Разбить лагерь</string>
    <string name="prologue_game_over_down_text_sleeping_bug">
        Адам наблюдал, как его рюкзак уносит вода. До темноты осталось ещё пара часов
    и их не стоило тратить впустую. Адам уже бывал в этих местах. Если бы он только знал тогда, что ему стоило хорошенько изучить местность.\n
    Если идти дальше, вниз по реке, возможно он попадет к месту стоянки прошлой экспедиции. Места там хорошие, есть надежда, что там кто-то есть.\n
    Можно было вернуться назад и углубится в лес. Там, где он очнулся, хорошо была видна проселочная дорога, которая вела к старому охотничьему срубу на холме.\n
    Там можно было переночевать с некоторыми удобствами.\n
        Хорошо, что ещё спальник удалось найти</string>
    <string name="prologue_game_over_down_text">Адам наблюдал, как его рюкзак уносит вода. До темноты осталось ещё пара часов
    и их не стоило тратить впустую. Адам уже бывал в этих местах. Если бы он только знал тогда, что ему стоило хорошенько изучить местность.\n
    Если идти дальше, вниз по реке, возможно он попадет к месту стоянки прошлой экспедиции. Места там хорошие, есть надежда, что там кто-то есть.\n
    Можно было вернуться назад и углубится в лес. Там, где он очнулся, хорошо была видна проселочная дорога, которая вела к старому охотничьему срубу на холме.\n
    Там можно было переночевать с некоторыми удобствами.</string>
    <string name="prologue_game_over_down_text_button_move_hunting_lodge">Идти к охотничьему домику</string>
    <string name="prologue_cave_text_start">Вблизи пещера отдавала холодом и смертью.\n
        Не долго думая, Адам шагнул в темный проход, по крайней мере тут можно немного отдохнуть и переждать дождь\n
        Пещера была прекрасно расположена: ниже река служила хорошим источником воды, а чуть выше по склону был расположен с десяток деревьев. Очевидно, дальше начинался густой лес.\n
        А еще отсюда открывался захватывающий вид на долину. \n
        Внутри пещера оказалась не такой огромной. Округлая площадка, в дальнем конце которой проглядывался проход вглубь. Стоять в пещере можно было в полный рост, но глубже свод становился всё ниже.\n
        Пройдя чуть дальше, Адам заметил, что дальний проход разветвляется и правый путь ведёт вниз, вглубь, да и к тому же сужается.
        Левый же заканчивался ещё одной площадкой. Свет пробивался через отверстие в стене. Сложно сказать, когда он появился, но дождевой сток обильно скапливался в центре площадки, образуя естественный бассейн.\n
        Скорее всего, левая площадка, хотя и выглядит просторной, все же не ведет куда-то ещё и, всё изучив, можно вернуться к выходу из пещеры. А вот проход вглубь не известно на сколько уходит в грубину.
</string>
    <string name="prologue_before_breakage_button_food">
       Перекусить
    </string>
    <string name="prologue_before_breakage_button_breakage">
       Осмотреть скалу
    </string>
    <string name="prologue_before_breakage_button_breakage_start">
       Начать взбираться
    </string>
    <string name="prologue_before_breakage_button_bypass">
       Идти в обход
    </string>
</resources>