<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prologue_breakage_background"
    tools:context=".PrologueBeforeBreakage">

    <CheckBox
        android:id="@+id/checkBoxBeforeBreakageID"
        android:layout_width="342dp"
        android:layout_height="37dp"
        android:text="@string/prologue_before_breakage_button_food"
        android:textColor="#303030"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <TextView
        android:id="@+id/textBeforeBreakageID"
        android:layout_width="342dp"
        android:layout_height="500dp"
        android:lineSpacingExtra="0sp"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/prologue_cave_text_start"
        android:textColor="#303030"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <RadioGroup
        android:id="@+id/radioGroupBeforeBreakageID"
        android:layout_width="342dp"
        android:layout_height="96dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971">

        <RadioButton
            android:id="@+id/buttonBeforeBreakageFirstID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#60ffffff"
            android:button="@drawable/radio_button_selector"
            android:onClick="onBeforeBreakageFirst"
            android:text="@string/prologue_before_breakage_button_breakage"
            android:textColor="#303030"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="387dp" />

        <RadioButton
            android:id="@+id/buttonBeforeBreakageSecondID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#60ffffff"
            android:button="@drawable/radio_button_selector"
            android:onClick="onBeforeBreakageSecond"
            android:text="@string/prologue_before_breakage_button_bypass"
            android:textColor="#303030"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="419dp" />

        <RadioButton
            android:id="@+id/buttonBeforeBreakageThirdID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#60ffffff"
            android:button="@drawable/radio_button_selector"
            android:onClick="onBeforeBreakageThird"
            android:text="@string/prologue_before_breakage_button_breakage_start"
            android:textColor="#303030"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="419dp" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
