<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prologue_down_second_scene_no_backpack_background"
    tools:context="com.example.last_spring.gameprealpha.PrologueDownSecondSceneNoBackPack">

    <TextView
        android:id="@+id/textNoBackpackID"
        android:layout_width="342dp"
        android:layout_height="289dp"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/prologue_game_over_down_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textNoBackpackSleepingBugID"
        android:layout_width="342dp"
        android:layout_height="26dp"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/prologue_game_over_down_text_sleeping_bug"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <RadioGroup
        android:id="@+id/radioGroupPrologueID"
        android:layout_width="342dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617">

        <RadioButton
            android:id="@+id/buttonNoBackPackMoveHuntingLodgeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#60ffffff"
            android:button="@drawable/radio_button_selector"
            android:onClick="onNoBackPackMoveHuntingLodge"
            android:text="@string/prologue_game_over_down_text_button_move_hunting_lodge"
            android:textColor="#303030"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="355dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
